--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Run ESLint
         run: npm run lint
       - name: Run tests
-        run: npm test
+        run: npm run test
